--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body, html{
 }
 
 h1{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 400%;
     text-align: center;
 }
