--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h2{
     width: 1000px;
     margin-left: 12%;
     overflow: visible;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Courier New', Courier, monospace;
 }
 
 .album2{
