--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ h2{
     vertical-align: top;
     margin-left: 5%;
     width: 80%;
-    background-color: aqua;
+    background-color: lightblue;
     font-size: 20px;
 }
 
